edited sheet padding and some

--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -28,7 +28,7 @@
         .sheet {
             width: 210mm;
             min-height: 297mm;
-            padding: 20mm 20mm 20mm 25mm;
+            padding: 18mm 20mm 20mm 25mm;
             background-image: url('../assets/general/background.jpg');
             /* Background image for each sheet */
             background-size: auto 100%;
@@ -191,6 +191,9 @@
                 margin: 0;
                 box-shadow: none;
             }
+            .page-number {
+                display: none;
+            }
         }
     </style>
 </head>
@@ -232,7 +235,7 @@
 
                 <img src="../assets/ch02/Teamwork Challenge.webp" alt="Robots in a legal pre-Match starting position in a Teamwork Challenge" style="width: 100%; height: auto; display: block; margin: 15px 0;">        <p class="img-caption">团队挑战赛中，机器人在合法赛前起始位置</p>
 
-        <h2 style="margin: 0;">简单来说：</h2>
+        <!-- <h2 style="margin: 0;">简单来说：</h2> -->
         <p>这个游戏叫 <strong>Mix & Match</strong>（混合与匹配）。我们要操作机器人把场地上各种颜色的 <strong>Pin (销钉)</strong> 和长长的 <strong>Beam
                 (梁)</strong> 捡起来，堆成高高的塔，然后放到特定的 <strong>Goal (得分区)</strong> 里。</p>
 
