--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -135,13 +135,14 @@
             border: 1px solid #333;
             padding: 10px;
             text-align: center;
-            font-size: 14px;
+            font-size: 18px;
             word-break: break-word;
         }
 
         th {
             background-color: #FFCC80;
             font-weight: bold;
+            font-family: 'Noto Sans SC', sans-serif;
         }
 
         /* 图片占位符 */
@@ -305,7 +306,7 @@
         <div class="chapter-2-marker"></div>
         <h1>2.1 这是一个什么游戏？</h1>
 
-        <p>王昕老师给我们发了厚厚一本《游戏手册》。一开始看全是字，头都晕了。但是当我们结合视频看的时候，发现这个游戏超有意思！</p>
+        <p>看着满是文字的《游戏手册》，这让人头晕。但是当我们结合视频看的时候，发现这个游戏超有意思！</p>
 
         <img src="../assets/ch02/Teamwork Challenge.webp"
             alt="Robots in a legal pre-Match starting position in a Teamwork Challenge"
@@ -571,45 +572,45 @@
         <div class="chapter-2-marker"></div>
         <h1>2.4 算分大挑战 (Scoring Examples)</h1>
 
-        <p>为了不被裁判“坑”，我们找了 10 个例子来练习算分。这些例子都在官方手册上能找到哦！</p>
-        <table style="font-size: 13px;">
+        <p>为了熟悉计分规则，我们找了 10 个例子来练习算分。这些例子都在官方手册上能找到哦！</p>
+        <table>
             <tr>
                 <th style="width: 10%;">例子</th>
-                <th style="width: 30%;">图示 (预留位置)</th>
+                <th style="width: 25%;">图示 (预留位置)</th>
                 <th>得分详解 (中文翻译)</th>
             </tr>
             <tr>
                 <td><strong>&lt;SE1&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE1]</div>
+                    <img src="../assets/ch02/SE1.webp" style="height: 100px;">
                 </td>
                 <td>所有物体都连在一起。6个Pin + 1个Beam + 3个3色Stack奖励 + 3个匹配奖励。<br><strong>总分：91分</strong></td>
             </tr>
             <tr>
                 <td><strong>&lt;SE2&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE2]</div>
+                    <img src="../assets/ch02/SE2.webp" style="height: 100px;">
                 </td>
                 <td>同上。所有物体都连在一起。<br><strong>总分：91分</strong></td>
             </tr>
             <tr>
                 <td><strong>&lt;SE3&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE3]</div>
+                    <img src="../assets/ch02/SE3.webp" style="height: 100px;">
                 </td>
-                <td>最上面的Stack歪了，没连上。只算下面的部分。<br>4个Pin + 1个Beam + 2个3色Stack + 2个匹配。<br><strong>总分：64分</strong></td>
+                <td>上面的Stack歪了，没连上。只算下面的。<br>4个Pin + 1个Beam + 2个3色Stack + 2个匹配。<br><strong>总分：64分</strong></td>
             </tr>
             <tr>
                 <td><strong>&lt;SE4&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE4]</div>
+                    <img src="../assets/ch02/SE4.webp" style="height: 100px;">
                 </td>
                 <td>Beam没连上！只有Pin连在一起。没有匹配分。<br>4个Pin + 0个Beam + 2个2色Stack。<br><strong>总分：14分</strong></td>
             </tr>
             <tr>
                 <td><strong>&lt;SE5&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE5]</div>
+                    <img src="../assets/ch02/SE5.webp" style="height: 100px;">
                 </td>
                 <td>全倒了，都不垂直。啥也不是。<br><strong>总分：0分</strong></td>
             </tr>
@@ -626,26 +627,25 @@
         <div class="chapter-2-marker"></div>
         <h1>2.4 算分大挑战 (Scoring Examples) 续</h1>
 
-        <p>为了不被裁判“坑”，我们找了 10 个例子来练习算分。这些例子都在官方手册上能找到哦！</p>
 
-        <table style="font-size: 13px;">
+        <table>
             <tr>
                 <th style="width: 10%;">例子</th>
-                <th style="width: 30%;">图示 (预留位置)</th>
+                <th style="width: 25%;">图示</th>
                 <th>得分详解 (中文翻译)</th>
             </tr>
 
             <tr>
                 <td><strong>&lt;SE6&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE6]</div>
+                    <img src="../assets/ch02/SE6.webp" style="height: 100px;">
                 </td>
                 <td>Pin连在一起，放在匹配颜色的Goal里，还在高塔上。<br>3个Pin + 3色Stack + 匹配奖励 + 高塔奖励。<br><strong>总分：38分</strong></td>
             </tr>
             <tr>
                 <td><strong>&lt;SE7&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE7]</div>
+                    <img src="../assets/ch02/SE7.webp" style="height: 100px;">
                 </td>
                 <td><strong>完美！</strong> Beam挂在高塔上，Pin插在Beam上。<br>Beam分裂成3个独立Stack，奖励全都有！<br><strong>总分：121分</strong>
                 </td>
@@ -653,21 +653,21 @@
             <tr>
                 <td><strong>&lt;SE8&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE8]</div>
+                    <img src="../assets/ch02/SE8.webp" style="height: 100px;">
                 </td>
                 <td>机器人碰到了Stack！所有连接分作废。<br>只有接触分。<br><strong>总分：2分</strong></td>
             </tr>
             <tr>
                 <td><strong>&lt;SE9&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE9]</div>
+                    <img src="../assets/ch02/SE9.webp" style="height: 100px;">
                 </td>
-                <td>机器人碰到了最下面的Stack。那个不算，但上面的还算。<br><strong>总分：66分</strong></td>
+                <td>机器人碰到了右下的Stack。那个不算，但上面的和左下的还算。<br><strong>总分：66分</strong></td>
             </tr>
             <tr>
                 <td><strong>&lt;SE10&gt;</strong></td>
                 <td>
-                    <div class="img-placeholder" style="height: 60px;">[Image SE10]</div>
+                    <img src="../assets/ch02/SE10.webp" style="height: 100px;">
                 </td>
                 <td>机器人碰到了Beam。完蛋，全都不算连接了。<br>只有接触分。<br><strong>总分：2分</strong></td>
             </tr>
@@ -687,11 +687,24 @@
         <div class="chapter-2-marker"></div>
         <div style="text-align: center; margin-top: 100px;">
             <h1 style="font-size: 48px; color: #2E86C1;">我们的战术推演</h1>
-            <p style="font-size: 20px; color: #666;">这部分可是我们的大脑风暴核心！我们算了四种不同的打法。</p>
-            <div
+
+            <!-- <div
                 style="width: 120px; height: 120px; border: 3px solid #2E86C1; border-radius: 10px; margin: 30px auto; display: flex; align-items: center; justify-content: center; font-size: 60px;">
-                🧠</div>
-            <p><strong>注意：后面有重大反转哦！</strong></p>
+                🧠</div> -->
+
+            <img src="../assets/ch02/brain_storm.webp"
+                style="height: 380px; display: block; margin: 50px auto; border-radius: 15px;">
+            <p style="font-size: 20px; text-align: center;">这部分可是我们的大脑风暴核心！我们设想了四种不同的打法。</p>
+
+            <div style="display: flex; justify-content: center;">
+                <ul style="text-align: left;">
+                    <li>策略 A：低空快跑流 (Low & Fast)</li>
+                    <li>策略 B：高塔建筑师 (Tower Builder)</li>
+                    <li>策略 C：Beam 专家 (重大发现！)</li>
+                    <li>策略 D：极限满分梦 (The Dream)</li>
+                </ul>
+            </div>
+
         </div>
         <div class="page-number">33</div>
     </div>
