--- a/engineering_notebook/ch02.html
+++ b/engineering_notebook/ch02.html
@@ -18,11 +18,10 @@
         body {
             background-color: #525659;
             font-family: 'ZCOOL KuaiLe', cursive;
-            /* 手写风格 */
             padding: 20px;
             color: #333;
             line-height: 1.6;
-
+            transition: background-color 0.3s;
         }
 
         .sheet {
@@ -30,17 +29,13 @@
             min-height: 297mm;
             padding: 18mm 20mm 20mm 25mm;
             background-image: url('../assets/general/background.jpg');
-            /* Background image for each sheet */
             background-size: auto 100%;
-            /* Cover the entire sheet */
             background-repeat: no-repeat;
             background-position: left center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
             margin: 0 auto 20px auto;
             position: relative;
             box-sizing: border-box;
-
             overflow: hidden;
             page-break-after: always;
         }
@@ -108,6 +103,7 @@
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
             margin: 20px 0;
             font-size: 24px;
+            transition: transform 0.3s;
         }
 
         /* 对话框 */
@@ -194,85 +190,154 @@
         }
 
         .chapter-2-marker {
-
             position: absolute;
-
             top: 56mm;
-
             right: 0;
-
             width: 10mm;
-
             height: 29mm;
-
             background-color: #FF9F43;
-
         }
-
-
 
         .a4-height-indicator {
-
             position: absolute;
-
             top: 297mm;
-
             left: 0;
-
             right: 0;
-
             border-top: 2px dashed red;
-
             z-index: 100;
-
         }
 
+        /* Toggle button styles */
+        #toggle-dark-text-btn {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            padding: 15px 25px;
+            background-color: #E67E22;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            transition: all 0.3s ease;
+        }
 
+        #toggle-dark-text-btn:hover {
+            background-color: #D35400;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+        }
+
+        #toggle-other-elements-btn {
+            position: fixed;
+            top: 80px;
+            right: 20px;
+            padding: 15px 25px;
+            background-color: #2E86C1;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            z-index: 1000;
+            transition: all 0.3s ease;
+        }
+
+        #toggle-other-elements-btn:hover {
+            background-color: #1F618D;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+        }
+
+        /* STATE: Hide Dark Text 
+           Keeps the layout/colors, but makes text invisible 
+        */
+        body.hide-dark-text p,
+        body.hide-dark-text li,
+        body.hide-dark-text .dialogue,
+        body.hide-dark-text .sticky-note,
+        body.hide-dark-text .img-caption,
+        body.hide-dark-text th,
+        body.hide-dark-text td,
+        body.hide-dark-text .chinese-label {
+            color: transparent !important;
+        }
+
+        /* STATE: Hide Decorative Elements 
+           Goal: Clean text only. No borders, no backgrounds, no images, no headers.
+        */
+
+        /* 1. Reset Body to plain white */
+        body.hide-other-elements {
+            background-color: #ffffff !important;
+        }
+
+        /* 2. Global reset for all elements inside body when hidden:
+              - Remove background colors/images
+              - Remove borders
+              - Remove shadows 
+              - Reset rotation (transform)
+        */
+        body.hide-other-elements * {
+            background-image: none !important;
+            background-color: transparent !important;
+            border: none !important;
+            box-shadow: none !important;
+            transform: none !important; /* Straightens the sticky notes */
+        }
+
+        /* 3. Specifically hide the Headings and Images completely (Visibility Hidden) */
+        body.hide-other-elements h1,
+        body.hide-other-elements h2,
+        body.hide-other-elements h3,
+        body.hide-other-elements img,
+        body.hide-other-elements .chapter-2-marker,
+        body.hide-other-elements .a4-height-indicator {
+            visibility: hidden !important;
+        }
+
+        /* 4. Ensure Page Numbers disappear if considered decoration */
+        body.hide-other-elements .page-number {
+            display: none !important;
+        }
 
         @media print {
-
             body {
-
                 background-color: #fff;
-
                 padding: 0;
-
                 margin: 0;
-
             }
-
-
 
             .sheet {
-
                 margin: 0;
-
                 box-shadow: none;
-
             }
 
-
-
-            .page-number {
-
+            .page-number,
+            .a4-height-indicator,
+            #toggle-dark-text-btn,
+            #toggle-other-elements-btn {
                 display: none;
-
             }
-
-
-
-            .a4-height-indicator {
-
-                display: none;
-
-            }
-
         }
     </style>
 </head>
 
-<body>
 
+<body>
+    <!-- Toggle Buttons -->
+    <button id="toggle-dark-text-btn" onclick="toggleDarkText()">
+        📝 深色文字：显示
+    </button>
+    
+    <button id="toggle-other-elements-btn" onclick="toggleOtherElements()">
+        🎨 装饰元素：显示
+    </button>
     <!-- ================= PAGE 21: 章节封面 ================= -->
     <div class="sheet">
         <div class="a4-height-indicator"></div>
@@ -1223,6 +1288,40 @@
         </div>
         <div class="page-number">53</div>
     </div>
+    <script>
+        let darkTextVisible = true;
+        let otherElementsVisible = true;
+
+        function toggleDarkText() {
+            darkTextVisible = !darkTextVisible;
+            const btn = document.getElementById('toggle-dark-text-btn');
+
+            if (darkTextVisible) {
+                document.body.classList.remove('hide-dark-text');
+                btn.textContent = '📝 深色文字：显示';
+                btn.style.backgroundColor = '#E67E22';
+            } else {
+                document.body.classList.add('hide-dark-text');
+                btn.textContent = '📝 深色文字：隐藏';
+                btn.style.backgroundColor = '#95A5A6';
+            }
+        }
+
+        function toggleOtherElements() {
+            otherElementsVisible = !otherElementsVisible;
+            const btn = document.getElementById('toggle-other-elements-btn');
+
+            if (otherElementsVisible) {
+                document.body.classList.remove('hide-other-elements');
+                btn.textContent = '🎨 装饰元素：显示';
+                btn.style.backgroundColor = '#2E86C1';
+            } else {
+                document.body.classList.add('hide-other-elements');
+                btn.textContent = '🎨 装饰元素：隐藏';
+                btn.style.backgroundColor = '#95A5A6';
+            }
+        }
+    </script>
 
 </body>
 
